--- a/Run_Postprocess.ipynb
+++ b/Run_Postprocess.ipynb
@@ -6,14 +6,13 @@
    "source": [
     "# Run Postprocess\n",
     "\n",
-    "(author: uhk, based on run_prepare.py by cs, created on: October 2017)\n",
+    "(author: uhk, based on run_postprocess.py by cs, created on: October 2017)\n",
     "\n",
-    "This notebook is for calling functions from TMW's prepare module.\n",
+    "This notebook is for calling functions from TMW's postprocess module.\n",
     "\n",
     "General advice on how to use the notebook:\n",
     "\n",
     "* Run the code blocks one after the other. The blocks \"Imports\" and \"General Settings\" have to be run first.\n",
-    "* Each visualization block, e.g. plot words-in-topics-treemap, can be run separately.\n",
     "* Some settings need to be changed, e.g. your working directory, number of topics, parameters, ... the comments say \"set...\" where this is the case. No other changes have to be made to the code."
    ]
   },
